# MePlayer

./: CMakeLists.txt  README.md
include/: Button.h  LibraryHandler.h  Playback.h  PlaybackQueue.h  TextButton.h  Track.h
src/: Button.cpp  LibraryHandler.cpp  Playback.cpp  PlaybackQueue.cpp  TextButton.cpp  Track.cpp  main.cpp
